# aider_to_claude

lessons/lesson-01-hello-ai-coding/: summary.md
lessons/lesson-01-hello-ai-coding/prompt/: prompt.md
lessons/lesson-01-hello-ai-coding/resources/: repomix.md  transcript.md
lessons/lesson-02-multi-file-editing/: summary.md
lessons/lesson-02-multi-file-editing/prompts/: prompts.md
lessons/lesson-02-multi-file-editing/resources/: repomix.md
lessons/lesson-02-multi-file-editing/src/: README.md  pyproject.toml  transcript.txt  transcript2.txt
lessons/lesson-03-perfect-prompt/: summary.md
lessons/lesson-03-perfect-prompt/prompts/: prompts.md
lessons/lesson-03-perfect-prompt/resources/: repomix.md  transcript.md
lessons/lesson-03-perfect-prompt/src/: .env  README.md  pyproject.toml  transcript.txt  transcript2.txt
lessons/lesson-03-perfect-prompt/src/transcript_analytics/: arg_parse.py  chart.py  constants.py  data_types.py  llm.py  main.py  output_format.py
lessons/lesson-04-common-pitfalls/: summary.md
lessons/lesson-04-common-pitfalls/prompts/: prompts.md
lessons/lesson-04-common-pitfalls/resources/: repomix.md  transcript.md
lessons/lesson-04-common-pitfalls/src/paicc-4/: .env.example  .gitignore  README.md  pyproject.toml  transcript.txt  transcript2.txt  transcript3.txt
lessons/lesson-04-common-pitfalls/src/paicc-4/src/: .gitignore  README.md  analysis.markdown  pyproject.toml  transcript.txt  transcript2.txt  transcript3.txt
lessons/lesson-04-common-pitfalls/src/paicc-4/src/transcript_analytics/: __init__.py  __main__.py  arg_parse.py  chart.py  constants.py  data_types.py  llm.py  main.py  output_format.py  transcript_analysis_v2.py  transcript_handler.py  transcript_processing.py
lessons/lesson-05-reasoning-models/: README.md  pyproject.toml  summary.md  transcript.txt
lessons/lesson-05-reasoning-models/prompts/: prompts.md
lessons/lesson-05-reasoning-models/resources/: repomix.md  transcript.md
lessons/lesson-05-reasoning-models/src/: analysis_20250806_125331.md  analysis_20250806_125823.md  argparse_module.py  chart.py  constants.py  datatypes.py  gemini_llm.py  main.py  output_format.py  transcript2.txt
lessons/lesson-05-reasoning-models/src/paicc-5/: README.md  pyproject.toml  run_analyze.bat  transcript.txt  transcript2.txt  transcript3.txt
lessons/lesson-05-reasoning-models/src/paicc-5/specs/: spec-template.md  transcript-analytics-v0.md
lessons/lesson-05-reasoning-models/src/paicc-5/src/spec_based_ai_coding/: constants.py  data_types.py  llm.py  main.py  word_counter.py
lessons/lesson-06-aider-secret/: summary.md
lessons/lesson-06-aider-secret/resources/: transcipt.md
lessons/lesson-07-principled-coding/: summary.md
lessons/lesson-07-principled-coding/resources/: transcript.md
(+9 files in other folders)
